# stooq-mcp

./: Cargo.toml  README.ja.md  README.md  install.sh
src/: lib.rs  main.rs  tests.rs
