[package]
name = "stooq-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.12.0", features = ["server", "transport-io", "macros"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = "1"
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"]}